feat(S1): implement student management
