# apps/api/src/students/students.module.ts
@@ -1,0 +1,11 @@
+import { Module } from "@nestjs/common";
+import { AuthModule } from "../auth/auth.module.js";
+import { StudentsController } from "./students.controller.js";
+import { StudentsService } from "./students.service.js";
+
+@Module({
+  imports: [AuthModule],
+  controllers: [StudentsController],
+  providers: [StudentsService],
+})
+export class StudentsModule {}
